--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <link rel="stylesheet" href="./assets/stylesheets/style.css" type="text/css">
 
         <!-- what is visible in the tab -->
-        <title>Works | Martijn de Heer</title>
+        <title>Works | François Girard-Meunier</title>
         <link rel="shortcut icon" type="image/png" href="./assets/favicon.png"/>
 
         <!-- what is visible when sharing a link -->
-        <meta name="author" content="Martijn de Heer">
-        <meta name="description" content="Work by graphic designer & developer Martijn de Heer">
+        <meta name="author" content="François Girard-Meunier">
+        <meta name="description" content="Work by graphic designer & developer François Girard-Meunier">
 
         <!-- social media sharing stuff -->
         <meta property="og:title" content="Works | Martijn de Heer">
         <meta property="og:image" content="./work/project-title-a/media/cover.jpg">
-        <meta property="og:description" content="Work by graphic designer & developer Martijn de Heer">
+        <meta property="og:description" content="Work by graphic designer & developer François Girard-Meunier">
         <meta property="og:url" content="my-site.com">
         <meta name="twitter:card" content="summary_large_image" />
     </head>
