--- a/work/project-title-c/index.html
+++ b/work/project-title-c/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
+
     <head>
-        <!-- meta data here -->
+
+        <!-- META DATA HERE -->
 
         <!-- some weird parts -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- linking your stylesheet -->
-        <link rel="stylesheet" href="../../assets/stylesheets/style.css" type="text/css">
-
         <!-- what is visible in the tab -->
-        <title>Project Titel C | Martijn de Heer</title>
+        <title>Project Title C | François Girard-Meunier</title>
         <link rel="shortcut icon" type="image/png" href="../../assets/favicon.png"/>
 
         <!-- what is visible when sharing a link -->
-        <meta name="author" content="Martijn de Heer">
+        <meta name="author" content="François Girard-Meunier, based on a ressource by Martijn de Heer">
         <meta name="description" content="Project description…">
 
         <!-- social media sharing stuff -->
-        <meta property="og:title" content="Project Titel C | Martijn de Heer">
+        <meta property="og:title" content="Project Title C | François Girard-Meunier">
         <meta property="og:image" content="./media/cover.jpg">
         <meta property="og:description" content="Project description…">
         <meta property="og:url" content="my-site.com">
         <meta name="twitter:card" content="summary_large_image" />
+
+        <!-- SCRIPTS AND DEPENDANCIES -->
+
+        <!-- linking your stylesheet -->
+        <link rel="stylesheet" href="../../assets/stylesheets/style.css?ver=1.0" type="text/css">
+
     </head>
 
     <body class="column-grid column-grid-12">
@@ -33,18 +38,21 @@
         <!-- navigation -->
         <nav class="column-small stick-to-top">
             <h1>
-                <a href="/">Martijn de Heer</a>
+                <a href="/">François Girard-Meunier</a>
             </h1>
 
             <p>
-                Graphic designer & developer from <a href="https://www.openstreetmap.org/node/2818252855">Amsterdam</a>. Focusing on the intersection of information, technology, and society.
+                Graphic designer & developer, based in <a href="https://www.openstreetmap.org/node/2818252855">Amsterdam</a>. Focusing on the intersection of visual culture, technology, and society.
             </p>
-            
+
             <p>
-                <em>Get in touch!</em><br>
-                <a href="mailto:m.heer@kabk.nl">m.heer@kabk.nl</a><br>
-                <a href="https://www.kabk.nl/en/teachers/martijn-de-heer">KABK</a><br>
-                <a href="https://www.linkedin.com/in/martijndeheer">LinkedIn</a>
+                <em>Contact</em><br>
+                <a href="mailto:f.girard-meunier@kabk.nl">f.girard-meunier@kabk.nl</a><br>
+            </p>
+
+            <p>
+                Sometimes at <a href="https://www.kabk.nl/en/teachers/francois-girard-meunier">KABK</a>,
+                most often at <a href="https://www.klapmutsenveem62.nl">Klapmutsenveem 62</a>.
             </p>
         </nav>
 
@@ -52,7 +60,7 @@
         <main class="column-grid column-grid-9">
             <section class="project-info column-small stick-to-top">
                 <h1 class="project-info-name">
-                    Project Titel C
+                    Project Title C
                 </h1>
 
                 <p class="project-info-metadata">
