--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
     </head>
 
-    <body class="column-grid column-grid-12">
+    <body class="column-grid column-grid-wrapper">
         <!-- visible content here -->
 
         <!-- navigation -->
-        <nav class="column-small stick-to-top">
+        <nav class="column-aside stick-to-top">
             <h1>
                 <a href="/">François Girard-Meunier</a>
             </h1>
@@ -57,11 +57,11 @@
         </nav>
 
         <!-- placing the main content of the page in a main block -->
-        <main>
+        <main class="column-main">
             <ul id="work">
                 <li class="project-thumbnail">
-                    <a href="./work/project-title-a/" class="column-grid column-grid-9">
-                        <section class="project-thumbnail-info column-small stick-to-top">
+                    <a href="./work/project-title-a/" class="column-grid column-grid-inner">
+                        <section class="project-thumbnail-info column-project stick-to-top">
                             <h2 class="project-thumbnail-info-name">
                                 Project Title A
                             </h2>
@@ -75,15 +75,15 @@
                             </p>
                         </section>
 
-                        <section class="project-thumbnail-cover column-large">
+                        <section class="project-thumbnail-cover column-media">
                             <img src="./work/project-title-a/media/cover.jpg" alt="Image of my project">
                         </section>
                     </a>
                 </li>
 
                 <li class="project-thumbnail">
-                    <a href="./work/project-title-b/" class="column-grid column-grid-9">
-                        <section class="project-thumbnail-info column-small stick-to-top">
+                    <a href="./work/project-title-b/" class="column-grid column-grid-inner">
+                        <section class="project-thumbnail-info column-project stick-to-top">
                             <h2 class="project-thumbnail-info-name">
                                 Project Title B
                             </h2>
@@ -97,15 +97,15 @@
                             </p>
                         </section>
 
-                        <section class="project-thumbnail-cover column-large">
-                            <img src="./work/project-title-b/media/cover.jpg" alt="Image of my project">
+                        <section class="project-thumbnail-cover column-media">
+                            <img loading="lazy" src="./work/project-title-b/media/cover.jpg" alt="Image of my project">
                         </section>
                     </a>
                 </li>
 
                 <li class="project-thumbnail">
-                    <a href="./work/project-title-c/" class="column-grid column-grid-9">
-                        <section class="project-thumbnail-info column-small stick-to-top">
+                    <a href="./work/project-title-c/" class="column-grid column-grid-inner">
+                        <section class="project-thumbnail-info column-project stick-to-top">
                             <h2 class="project-thumbnail-info-name">
                                 Project Title C
                             </h2>
@@ -119,8 +119,8 @@
                             </p>
                         </section>
 
-                        <section class="project-thumbnail-cover column-large">
-                            <img src="./work/project-title-c/media/cover.jpg" alt="Image of my project">
+                        <section class="project-thumbnail-cover column-media">
+                            <img loading="lazy" src="./work/project-title-c/media/cover.jpg" alt="Image of my project">
                         </section>
                     </a>
                 </li>
